[package]
name = "libcdio-sys"
version = "1.0.0"
edition = "2024"
authors = ["Joaquim Monteiro <joaquim.monteiro@protonmail.com>"]
description = "Native bindings to the libcdio (and libcdio-paranoia) library"
repository = "https://github.com/MonterraByte/libcdio-sys"
readme = "README.md"
exclude = ["/.github"]
keywords = ["ffi", "cd", "cdio", "iso9660", "udf"]
categories = ["external-ffi-bindings", "hardware-support", "multimedia", "multimedia::audio"]
license = "GPL-3.0+"

[build-dependencies]
bindgen = "0.72"
system-deps = "7"

[features]
default = ["iso9660", "udf"]
iso9660 = []
udf = []
cdda = []
paranoia = ["cdda"]

[package.metadata.system-deps]
libcdio = "0"
libiso9660 = { version = "0", feature = "iso9660" }
libudf = { version = "0", feature = "udf" }
libcdio_cdda = { version = "0", feature = "cdda" }
libcdio_paranoia = { version = "0", feature = "paranoia" }

[package.metadata.docs.rs]
all-features = true
